--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
   },
   "dependencies": {
     "emailjs-com": "^2.6.4",
-    "embla-carousel": "^4.1.5",
-    "next": "10.0.7",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-modal": "^3.12.1"
-  },
-  "devDependencies": {}
+    "embla-carousel-react": "^7.1.0",
+    "next": "13.2.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-modal": "^3.16.1"
+  }
 }
